--- a/backend-craft/.ddev/config.yaml
+++ b/backend-craft/.ddev/config.yaml
@@ -1,7 +1,7 @@
-name: backend-craft
+name: backend
 type: craftcms
 docroot: web
-php_version: "8.0"
+php_version: "8.1"
 webserver_type: nginx-fpm
 router_http_port: "80"
 router_https_port: "443"
@@ -17,7 +17,6 @@ use_dns_when_possible: true
 composer_version: "2"
 web_environment: []
 nodejs_version: "16"
-
 # Key features of ddev's config.yaml:
 
 # name: <projectname> # Name of the project, automatically provides
