--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "frontend-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,10 +18,5 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
-  },
-  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
-  "main": "next.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  }
 }
